# fdg

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  config.py  docker-compose.development.yml  docker-compose.yml  main.py  pyproject.toml
__devops/: tfs-pipeline.yml
__devops/ansible/: deploy-pipeline.yaml
__devops/ansible/files/dev/: env
__devops/ansible/inventory/: hosts  test.hosts
__devops/ansible/roles/deploy/tasks/: main.yml
__devops/ansible/roles/deploy/templates/: docker-compose.yml.j2
__devops/ansible/templates/: docker-compose.yml.j2  keycloak.conf.j2
__devops/manifests/: deployment.yaml
bot/: bot.py
config/: __init__.py  settings.py
db/: database.py  enums.py  models.py
excel/: dama_cases.xlsx  dama_competencies.xlsx  dama_questions.xlsx  dama_roles.xlsx
handlers/: __init__.py  admin_hendler.py  common.py  states.py  test_handlers.py
repositories/: __init__.py  ai_repository.py  base.py  question_repository.py  user_repository.py
services/: ai_service.py  gpt.py  keyboard.py  logger.py  middleware.py  minio_service.py  redis_service.py  service_container.py  state_service.py  test_management_service.py  test_service.py  user_service.py  user_utils.py
validators/: __init__.py  user_validators.py
